--- a/css.css
+++ b/css.css
@@ -1,29 +1,16 @@
-h1,h2{margin:0.5em}
 *{margin:0}
 body{font-family:Arial}
-table{border-collapse:collapse}
-table#taulaComics{font-size:13px;margin:1em}
-td,th{border:1px solid #ccc;padding:0.7em;}
-th{background:#00aff1;color:white}
-td{background:white;text-align:center}
-td[estat]{font-size:11px;cursor:pointer}
-td[estat=disponible]{background:yellow}
-td[estat=comprat]{background:#af0}
-div.comicMenu{
-	border:2px solid #ccc;
-	background:#0aaff1;
-	color:white;
-	position:absolute;
-	padding:0.5em;
-}
-div.comicMenu button.opcio{
-	margin:0.5em;
-	padding:1em;
-}
-form#menuNouClient{
-	border:1px solid #ccc;
-	background:#eee;
-	position:absolute;
-	padding:0.5em;
-}
+h2{margin:0.5em;cursor:pointer}
+
+div.comicMenu button.opcio{margin:0.5em;padding:1em;}
+div.comicMenu{border:2px solid #ccc;background:#0aaff1;color:white;position:absolute;padding:0.5em;}
 form#menuNouClient input{padding:0.5em;font-size:14px;outline:none;}
+form#menuNouClient{border:1px solid #ccc;background:#eee;position:absolute;padding:0.5em;}
+table#taulaComics{font-size:13px;margin:1em}
+table{border-collapse:collapse}
+td,th{border:1px solid #ccc;padding:0.7em;}
+td[estat=comprat]{background:#af0}
+td[estat=disponible]{background:yellow}
+td[estat]{font-size:11px;cursor:pointer}
+td{background:white;text-align:center}
+th{background:#00aff1;color:white}
