--- a/css.css
+++ b/css.css
@@ -2,15 +2,17 @@
 body{font-family:Arial}
 h2{margin:0.5em;cursor:pointer}
 
+a{text-decoration:none;color:white}
 div.comicMenu button.opcio{margin:0.5em;padding:1em;}
 div.comicMenu{border:2px solid #ccc;background:#0aaff1;color:white;position:absolute;padding:0.5em;}
-form#menuNouClient input{padding:0.5em;font-size:14px;outline:none;}
-form#menuNouClient{border:1px solid #ccc;background:#eee;position:absolute;padding:0.5em;}
+form#menuNouClient input, form#menuNovaSerie input{padding:0.5em;font-size:14px;outline:none;}
+form#menuNouClient, form#menuNovaSerie{border:1px solid #ccc;background:#eee;position:absolute;padding:0.5em;}
 table#taulaComics{font-size:13px;margin:1em}
 table{border-collapse:collapse}
 td,th{border:1px solid #ccc;padding:0.7em;}
+td[estat]{font-size:11px;cursor:pointer}
 td[estat=comprat]{background:#af0}
 td[estat=disponible]{background:yellow}
-td[estat]{font-size:11px;cursor:pointer}
+td[estat=no-disponible]{color:#ccc;cursor:default}
 td{background:white;text-align:center}
 th{background:#00aff1;color:white}
